force-app/main/default/objects/Plant__c/Plant__c.object-meta.xml
<CustomObject>
    <description>a living organism of the kind exemplified by trees, shrubs, herbs, grasses, ferns, and mosses, typically growing in a permanent site, absorbing water and inorganic substances through its roots, and synthesizing nutrients in its leaves by photosynthesis using the green pigment chlorophyll.</description>
    <label>Plant</label>
    <nameField>
        <label>Plant Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Plants</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>