force-app/main/default/objects/Plant__c/fields/Light_Requirement__c.field-meta.xml
<CustomField>
    <fullName>Light_Requirement__c</fullName>
    <label>Light Requirement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>not defined</fullName>
                <default>true</default>
                <label>not defined</label>
            </value>
            <value>
                <fullName>full sun</fullName>
            </value>
            <value>
                <fullName>part sun</fullName>
            </value>
            <value>
                <fullName>light shade</fullName>
            </value>
            <value>
                <fullName>part shade</fullName>
            </value>
            <value>
                <fullName>full shade</fullName>
            </value>
            <value>
                <fullName>dense shade</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>