force-app/main/default/objects/Plant__c/fields/Plant_Types__c.field-meta.xml
<CustomField>
    <fullName>Plant_Types__c</fullName>
    <label>Plant Types</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Plant_Types</valueSetName>
    </valueSet>
</CustomField>