force-app/main/default/objects/Plant__c/fields/PlantID__c.field-meta.xml
<CustomField>
    <fullName>PlantID__c</fullName>
    <description>A unique ID for a unit of plant commodity</description>
    <displayFormat>PID-{0000}</displayFormat>
    <label>PlantID</label>
    <type>AutoNumber</type>
</CustomField>