force-app/main/default/objects/Plant__c/recordTypes/Dense_Shade.recordType-meta.xml
<RecordType>
    <fullName>Dense_Shade</fullName>
    <active>true</active>
    <label>Dense Shade</label>
</RecordType>