force-app/main/default/objects/Plant__c/recordTypes/Plant.recordType-meta.xml
<RecordType>
    <fullName>Plant</fullName>
    <active>true</active>
    <label>Plant</label>
</RecordType>