force-app/main/default/objects/Plant__c/recordTypes/Plant_with_Customized_Light.recordType-meta.xml
<RecordType>
    <fullName>Plant_with_Customized_Light</fullName>
    <active>true</active>
    <label>Plant with Customized Light</label>
</RecordType>